--- a/iOSEngineerCodeCheck/Base.lproj/Main.storyboard
+++ b/iOSEngineerCodeCheck/Base.lproj/Main.storyboard
@@ -113,13 +113,13 @@
                     </view>
                     <navigationItem key="navigationItem" id="J6o-vL-S1z"/>
                     <connections>
-                        <outlet property="forksLbl" destination="ZMv-4f-X2V" id="i84-sH-c5t"/>
-                        <outlet property="imgView" destination="Iim-eb-8Ad" id="dmH-tP-ZuI"/>
-                        <outlet property="issuesLbl" destination="dzg-K8-h2L" id="L0v-sy-cD4"/>
+                        <outlet property="forkLbl" destination="ZMv-4f-X2V" id="i84-sH-c5t"/>
+                        <outlet property="imageView" destination="Iim-eb-8Ad" id="dmH-tP-ZuI"/>
+                        <outlet property="issueLbl" destination="dzg-K8-h2L" id="L0v-sy-cD4"/>
                         <outlet property="langLbl" destination="s3M-QO-Kom" id="ibp-jS-ZCk"/>
-                        <outlet property="strsLbl" destination="0WZ-UA-R8O" id="gYb-gI-iMf"/>
+                        <outlet property="starLbl" destination="0WZ-UA-R8O" id="gYb-gI-iMf"/>
                         <outlet property="titleLbl" destination="4q1-pG-WSB" id="xsI-m1-I8R"/>
-                        <outlet property="wchsLbl" destination="lQC-lo-IqN" id="Drg-Jv-iUh"/>
+                        <outlet property="wacherLbl" destination="lQC-lo-IqN" id="Drg-Jv-iUh"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rj0-Ld-RTn" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
